--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>はじめてのjQuery</title>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript">
+      &(function(){
+        $("#toggle").on("click",function(){
+          $("#target").fadeToggle("slow");
+        });
+      });
+    </script>
+  </head>
+  <body>
+    <p id="target">内容を記述</p>
+    <button id="toggle">切り替え</button>
+  </body>
+</html>
