--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </script>
   </head>
   <body>
-    <p id="target">内容を記述</p>
+    <div id="target">内容を記述</div>
     <button id="toggle">切り替え</button>
   </body>
 </html>
