--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>はじめてのjQuery</title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript">
-      &(function(){
+      $(function(){
         $("#toggle").on("click",function(){
           $("#target").fadeToggle("slow");
         });
