--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
       $(function(){
         $("#toggle").on("click",function(){
-          $("#target").fadeToggle("slow");
+          $("#target").fadeTo("slow", 1.0);
         });
       });
     </script>
