--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript">
       $(function(){
         $("#toggle").on("click",function(){
-          $("#target").fadeTo("slow", 1.0);
+          $("#target").fadeToggle("slow");
         });
       });
     </script>
