--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript">
       $(function(){
         $("#toggle").on("click",function(){
-          $("#target").fadeToggle("slow");
+          $("#target").toggle(2000);
         });
       });
     </script>
