--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript">
       $(function(){
-        $("#toggle").on("click",function(){
+        $("#toggle").click(function(){
           $("#target").toggle(2000);
         });
       });
