--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </script>
   </head>
   <body>
-    <p>ページトップ</p>
+    <p>カーソルを乗せると色変更</p>
     <div id="target">内容を記述</div>
     <button id="toggle">切り替え</button>
   </body>
