--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           $("#target").toggle("slow");
         });
         $("p").hover(function(){
-          $("p").css("color","yellow");
+          $(this).css("color","red");
         });
       });
     </script>
