--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
         $("#toggle").click(function(){
           $("#target").toggle("slow");
         });
-        $("p").hover(function(){
+        $("p").hover(
+          function(){
           $(this).css("color","red");
+        },
+          function(){
+            $(this).css("color","black");
         });
       });
     </script>
