--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </script>
   </head>
   <body>
-    <p>カーソルを乗せると色変更</p>
+    <p>カーソルを乗せると色変更？</p>
     <div id="target">内容を記述</div>
     <button id="toggle">切り替え</button>
   </body>
